# Claude

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  render.yaml  securite.html  sw.js  tailwind.config.js
.github/workflows/: deploy-pages.yml  desktop-release.yml
.smoke2/: dbg.js
app/: index.html  manifest.webmanifest
desktop/: README.md
email-marketing/: README.md
email-marketing/backend/: .env.example  package.json
email-marketing/backend/src/: index.js
email-marketing/backend/src/config/: env.js
email-marketing/backend/src/db/: migrate.js  pool.js
email-marketing/backend/src/lib/: ai.js  crypto.js  http.js  tracking.js
email-marketing/backend/src/middleware/: auth.js  error.js
email-marketing/db/: schema.sql
email-marketing/frontend/: .env.example  index.html  package.json
email-marketing/frontend/src/: App.jsx  styles.css
produit/: donnees.html  pipeline.html
public/: manifest.webmanifest  sw.js
scripts/: build-product-pages.mjs  marketing-shots.mjs  mtRoundtrip.mjs  screenshots.mjs  smoke.jsx
site/: index.html
site/produit/: activite.html  collaboration.html  donnees.html  pilotage.html  pipeline.html  remuneration.html
src/: App.jsx  Chatbot.jsx  GlobalSearch.jsx  blobCrypto.js  i18n.jsx  index.css  main.jsx  multiTenantSync.js  store.jsx  supabaseAuth.js  supabaseClient.js  supabaseConfig.js  supabaseSync.js  themes.js  ui.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/pages/: Admin.jsx  AiDashboard.jsx  Clients.jsx  Company.jsx  Contacts.jsx  Dashboard.jsx  Icp.jsx  KnowledgeBase.jsx  Kpi.jsx  Leads.jsx  Logs.jsx  MyTasks.jsx  Notes.jsx  OrgChart.jsx  Primes.jsx  Projects.jsx  Rdv.jsx  Requests.jsx  Settings.jsx  Support.jsx  SupportLogs.jsx  SupportTrash.jsx  Tasks.jsx  TeamLead.jsx  TicketChat.jsx  Tickets.jsx  Trash.jsx
supabase/: MIGRATION_MULTITENANT.md  SETUP.md  schema.sql  schema_multitenant.sql
(+25 files in other folders)
