[package]
name = "bd-report"
version = "1.16.0"
description = "BD Report — espace sales tout-en-un"
authors = ["BD Report"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Contournement : brotli 8.0.3 (tiré par Tauri pour compresser les assets) est cassé
# — il mélange alloc-no-stdlib 2.0.4 et 3.0.0. On épingle la version 8.0.2 (cohérente).
brotli = "=8.0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
