[package]
name = "bd-report"
version = "1.16.0"
description = "BD Report — espace sales tout-en-un"
authors = ["BD Report"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# default-features=false retire la feature "compression" de Tauri, qui tire le crate
# `brotli` (cassé dans ses versions récentes : conflit alloc-no-stdlib 2.x vs 3.x).
# On conserve `wry` (le moteur de rendu webview). Les assets sont juste non compressés.
tauri = { version = "2", default-features = false, features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
